# smart-caregiver

./: AGENTS.md  README.md  pr_description.md  skills-lock.json  splash_screen.html
.agents/rules/: smart-caregiver.md
docs/: bdd.md  prd.md  server_plan.md
mobile/: .omp-brief-playstore.md  README.md  dashboard_stitch.html  fix_icons.py  login_code.txt  patient_detail_code.txt  pubspec.yaml  tambah_lansia_code.txt
mobile/android/app/: build.gradle.kts
mobile/ios/Runner/: Info.plist
mobile/lib/: main.dart
mobile/test/: test_helpers.dart
mobile/test/integration/: main_flows_test.dart
server/: .env.example  README.md  plan.md  pyproject.toml  requirements.txt
server/migrations/versions/: 002_add_notification_priority.py
server/src/: main.py
server/src/app/core/: auth.py  config.py  error_handlers.py  internal_auth.py  logging.py  rate_limiter.py  scheduler.py
server/src/app/routers/: auth.py  dashboard.py  elderly.py  health.py  internal_jobs.py  recommendation.py  schedule.py
server/src/app/schemas/: error.py  notification.py
server/src/app/services/: dashboard_service.py  health_service.py  notification_service.py  recommendation_service.py  schedule_service.py  summary_service.py
server/src/database/: enums.py  seed.py
server/src/database/models/: __init__.py  elderly.py  notification.py  user.py
server/src/fastapi_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/tests/: __init__.py  conftest.py  test_health.py  test_integration.py  test_internal_jobs.py  test_recommendation_security.py  test_weekly_summary.py
(+69 files in other folders)
