[project]
name = "fastapi-worker"
version = "0.1.0"
description = "Python fastapi example"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "markupsafe",
    "jinja2",
    "sqlalchemy[asyncio]>=2.0.49",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "pydantic-settings>=2.14.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.28.1",
    "authlib>=1.7.0",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.0.1",
    "scikit-fuzzy>=0.4.2",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "packaging>=23.0",
    "networkx>=3.0",
    "slowapi>=0.1.9",
    "apscheduler>=3.10.0",
    "structlog>=24.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
asyncio_default_test_loop_scope = "module"
